--- a/css/style.css
+++ b/css/style.css
@@ -670,6 +670,10 @@ main {
     text-align: center; }
   .event__input--price {
     width: 66px; }
+  .event__input::-webkit-outer-spin-button,
+  .event__input::-webkit-inner-spin-button {
+    appearance: none;
+    margin: 0; }
 
 .event__save-btn {
   margin-right: 18px; }
